[tool.poetry]
name = "ship_pygame"
version = "0.1.0"
description = ""
authors = ["Dongcheng Wang <1219782000@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
